--- a/HR_Project/HR_Project.Presentation/Views/Expense/Create.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Expense/Create.cshtml
@@ -2,7 +2,7 @@
 @using HR_Project.Common.Extensions;
 @using System.ComponentModel.DataAnnotations
 
-@model HR_Project.Common.Models.VMs.Expense_MasterExpenseVM
+@model HR_Project.Common.Models.DTOs.MasterExpenseDTO
 
 @{
 	ViewData["Title"] = "Create";
@@ -19,9 +19,10 @@
 
 	<!-- DataTales Example -->
 	<div class="card shadow mb-4">
-		<form asp-action="Create">
+		<form asp-action="Create" method="post" enctype="multipart/form-data">
 			<div asp-validation-summary="ModelOnly" class="text-danger"></div>
 			<div class="card-body">
+				<span asp-validation-for="Expenses" class="text-danger"></span>
 				<div class="table-responsive">
 
 					<table class="table table-bordered" id="dataTable" width="100%" cellspacing="0" role="grid" aria-describedby="dataTable_info" style="width: 100%;">
@@ -43,8 +44,10 @@
 								<th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" aria-label="Currency: activate to sort column ascending" style="width: 140px;">
 									Para Birimi
 								</th>
+								<th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" aria-label="UploadImage: activate to sort column ascending" style="width: 140px;">
+									Resim
+								</th>
 								<th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" aria-label="Currency: activate to sort column ascending" style="width: 140px;">
-
 								</th>
 							</tr>
 						</thead>
@@ -88,13 +91,19 @@
 												<span asp-validation-for="Expenses[i].Currency" class="text-danger"></span>
 											</div>
 										</td>
-										
+										<td>
+											<div class="form-group">
+												<input asp-for="Expenses[i].UploadImage" class="form-control" />
+												<span asp-validation-for="Expenses[i].UploadImage" class="text-danger"></span>
+											</div>
+										</td>
 										<td>
 											<div class="form-group">
 												<input type="button" value="Masrafı Sİl" class="btn btn-primary rowdel" />
 
 											</div>
 										</td>
+
 									</tr>
 								}
 							}
@@ -153,6 +162,10 @@
 						'<span class="text-danger" data-valmsg-for="Expenses[' + rowCount + '].Currency" data-valmsg-replace="true"></span></div></td>');
 
 					newRow.append('<td><div class="form-group">' +
+						'<input class="form-control" type="file" name="Expenses[' + rowCount + '].UploadImage" />' +
+						'<span class="text-danger" data-valmsg-for="Expenses[' + rowCount + '].UploadImage" data-valmsg-replace="true"></span></div></td>');
+
+					newRow.append('<td><div class="form-group">' +
 						'<input type="button" value="Masrafı Sİl" class="btn btn-primary rowdel" />' +
 						'</div></td>');
 
@@ -182,59 +195,3 @@
 
 		</script>
 	}
-
-
-
-
-
-	@* <div class="p-4">
-	<h1 class="h3 mb-2 text-gray-800">Masraf Oluştur</h1>
-	</div>
-
-	<hr />
-
-	<div class="row p-4">
-	<div class="col-md-4">
-	<form asp-action="Create">
-	<div asp-validation-summary="ModelOnly" class="text-danger"></div>
-
-	<div class="form-group">
-	<label asp-for="ExpenseType" class="control-label">Masraf Türü</label>
-	<select class="form-control" asp-for="ExpenseType" asp-items="EnumHelper.GetEnumSelectList<ExpenseType>()">
-	<option value="-1">Masraf Türü</option>
-	</select>
-	<span asp-validation-for="ExpenseType" class="text-danger"></span>
-	</div>
-
-	<div class="form-group">
-	<label asp-for="ExpenseDate" class="control-label">Masraf Tarihi</label>
-	<input asp-for="ExpenseDate" class="form-control" id="expenseDate" type="date" />
-	<span asp-validation-for="ExpenseDate" class="text-danger"></span>
-	</div>
-
-	<div class="form-group">
-	<label asp-for="ExpenseAmount" class="control-label">Masraf Miktarı</label>
-	<input asp-for="ExpenseAmount" class="form-control" />
-	<span asp-validation-for="ExpenseAmount" class="text-danger"></span>
-	</div>
-
-	<div class="form-group">
-	<label asp-for="Currency" class="control-label">Para Birimi</label>
-	<select class="form-control" asp-for="Currency" asp-items="EnumHelper.GetEnumSelectList<Currency>()">
-	<option value="-1">Para Birimi</option>
-	</select>
-	<span asp-validation-for="Currency" class="text-danger"></span>
-	</div>
-
-	<div class="form-group">
-	<label asp-for="Reason" class="control-label">Açıklama</label>
-	<input asp-for="Reason" class="form-control" />
-	<span asp-validation-for="Reason" class="text-danger"></span>
-	</div>
-
-	</form>
-
-
-	<div class="p-4">
-	<a asp-action="Index">Listeye Dön</a>
-	</div> *@
