Masraf resim işlemleri tamamlandı. Profil sayfası sorunsuz erişilebiliyor.

--- a/HR_Project/HR_Project.Presentation/Views/Expense/Update.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Expense/Update.cshtml
@@ -19,7 +19,7 @@
 
 	<!-- DataTales Example -->
 	<div class="card shadow mb-4">
-		<form asp-action="Update">
+		<form asp-action="Update" enctype="multipart/form-data">
 			<div asp-validation-summary="ModelOnly" class="text-danger"></div>
 			<div class="card-body">
 				<span asp-validation-for="Expenses" class="text-danger"></span>
@@ -116,7 +116,7 @@
 					</table>
 				</div>
 				<div class="form-group">
-					<input type="submit" value="Oluştur" class="btn btn-primary" />
+					<input type="submit" value="Güncelle" class="btn btn-primary" />
 				</div>
 			</div>
 		</form>
