Company Register başarılı. Register tamamlandı

--- a/HR_Project/HR_Project.Presentation/Views/Account/Register.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Account/Register.cshtml
@@ -84,6 +84,13 @@
                                                    placeholder="Telefon Numarası...">
                                         </div>
 
+
+                                        <div class="form-group" data-validate="PersonnelCount">
+                                            <input type="text" class="form-control form-control-user" name="PersonnelCount"
+                                                   id="exampleInputPersonnelCount" aria-describedby="PersonnelCountHelp"
+                                                   placeholder="Personel Sayısı...">
+                                        </div>
+
                                         <div class="form-group">
                                             <select asp-for="CityId" id="CityId" asp-items="Model.CityList" class="form-control form-select-sm">
                                                 <option value="">Şehir seçiniz</option>
