Absence, Advance, Expense ve Personel sayfalarında silme işlemine emin misiniz mesajı eklendi.

--- a/HR_Project/HR_Project.Presentation/Views/Absence/Index.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Absence/Index.cshtml
@@ -121,7 +121,7 @@
 											<td>
 												<a asp-action="Update" asp-route-id="@item.Id">Düzenle</a>
 												|
-												<a asp-action="Delete" asp-route-id="@item.Id">Sil</a>
+												<a asp-action="Delete" role="button" onclick="confirmDelete('@item.Id')" id="deleteprocess">Sil</a>
 											</td>
 										}
 										else
@@ -264,7 +264,7 @@
 </body>
 
 <script>
-	var dropdown1 = document.getElementById("pageSizeDropdown");
+	var dropdown1 = document.getElementById("deleteprocess");
 
 	dropdown1.addEventListener("change", function () {
 		var selectedPageSize = this.value;
