--- a/HR_Project/HR_Project.Presentation/Views/Expense/Index.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Expense/Index.cshtml
@@ -97,7 +97,7 @@
 														<td>
 															<a asp-action="Update" asp-route-id="@masterExpanse.Id">Düzenle</a>
 															|
-															<a asp-action="Delete" asp-route-id="@masterExpanse.Id">Sil</a>
+															<a asp-action="Delete" role="button" onclick="confirmDelete('@masterExpanse.Id')" id="deleteprocess">Sil</a>
 														</td>
 													}
 													else
@@ -295,7 +295,7 @@
 </body>
 
 <script>
-	var dropdown1 = document.getElementById("pageSizeDropdown");
+	var dropdown1 = document.getElementById("deleteprocess");
 
 	dropdown1.addEventListener("change", function () {
 		var selectedPageSize = this.value;
