--- a/HR_Project/HR_Project.Presentation/Views/Advance/Index.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Advance/Index.cshtml
@@ -110,7 +110,7 @@
                                             <td>
                                                 <a asp-action="Update" asp-route-id="@item.Id">Düzenle</a>
                                                 |
-                                                <a asp-action="Delete" asp-route-id="@item.Id">Sil</a>
+                                                <a asp-action="Delete" role="button" onclick="confirmDelete('@item.Id')" id="deleteprocess">Sil</a>
                                             </td>
                                         }
                                         else
@@ -228,7 +228,7 @@
 
 
 <script>
-    var dropdown1 = document.getElementById("pageSizeDropdown");
+    var dropdown1 = document.getElementById("deleteprocess");
 
     dropdown1.addEventListener("change", function () {
         var selectedPageSize = this.value;
