--- a/HR_Project/HR_Project.Presentation/Views/Personnel/Index.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Personnel/Index.cshtml
@@ -105,7 +105,7 @@
                                     <td>
                                         <a asp-controller="Personnel" asp-action="Update" asp-route-id="@item.Id.ToString()">Düzenle</a>
                                         |
-                                        <a asp-controller="Personnel" asp-action="Delete" asp-route-id="@item.Id.ToString()">Sil</a>
+                                        <a asp-action="Delete" role="button" onclick="confirmDelete('@item.Id')" id="deleteprocess">Sil</a>
                                     </td>
 
                                     
@@ -216,7 +216,7 @@
 
 
 <script>
-    var dropdown1 = document.getElementById("pageSizeDropdown");
+    var dropdown1 = document.getElementById("deleteprocess");
 
     dropdown1.addEventListener("change", function () {
         var selectedPageSize = this.value;
