--- a/HR_Project/HR_Project.Presentation/Views/Absence/Update.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Absence/Update.cshtml
@@ -17,7 +17,7 @@
 			<input asp-for="Condition" type="hidden" />
 			<div asp-validation-summary="ModelOnly" class="text-danger"></div>
 			<div class="form-group">
-				<label asp-for="Reason" class="control-label"></label>
+				<label asp-for="Reason" class="control-label">Açıklama</label>
 				<input asp-for="Reason" class="form-control" />
 				<span asp-validation-for="Reason" class="text-danger"></span>
 			</div>
@@ -44,7 +44,7 @@
 				<span asp-validation-for="AbsenceDuration" class="text-danger"></span>
 			</div>
 			<div class="form-group">
-				<input type="submit" value="Kaydet" class="btn btn-primary"  />
+				<input type="submit" value="Güncelle" class="btn btn-primary"  />
 			</div>
 		</form>
 	</div>
