Miktar ve para birimi aynı kutuda oluşturuldu. (Avans, Masraf)

--- a/HR_Project/HR_Project.Presentation/Views/Advance/Index.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Advance/Index.cshtml
@@ -68,10 +68,7 @@
                                     Açıklama
                                 </th>
                                 <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" aria-label="Reason: activate to sort column ascending" style="width: 140px;">
-                                    Miktar
-                                </th>
-                                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" aria-label="Currency: activate to sort column ascending" style="width: 140px;">
-                                    Para Birimi
+                                    Tutar
                                 </th>
                                 <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" aria-label="StartDate: activate to sort column ascending" style="width: 140px;">
                                     Son Ödeme Tarihi
@@ -93,10 +90,7 @@
                                         @item.Reason
                                     </td>
                                     <td>
-                                        @item.Amount 
-                                    </td>
-                                    <td>
-                                        @item.Currency.GetDisplayName()
+                                        @item.Amount @item.Currency
                                     </td>
                                     <td>
                                         @item.LastPaidDate.ToShortDateString()
