--- a/HR_Project/HR_Project.Presentation/Views/Expense/Create.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Expense/Create.cshtml
@@ -111,12 +111,12 @@
 						</tbody>
 
 						<div class="form-group">
-							<input type="button" value="Masraf Ekle" class="btn btn-primary" id="addRow" />
+							<input type="button" value="Masraf Kalemi Ekle" class="btn btn-primary" id="addRow" />
 						</div>
 					</table>
 				</div>
 				<div class="form-group">
-					<input type="submit" value="Oluştur" class="btn btn-primary" />
+					<input type="submit" value=" Masraf Oluştur" class="btn btn-primary" />
 				</div>
 			</div>
 		</form>
