--- a/HR_Project/HR_Project.Presentation/Views/Expense/Index.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Expense/Index.cshtml
@@ -71,7 +71,7 @@
 									<thead>
 										<tr>
 											<th></th>
-											<th>Harcama Tarihi</th>
+											<th>Oluşturulma Tarihi</th>
 											<th>Durumu</th>
 											<th>Toplam Tutar</th>
 											<th>İşlemler</th>
