Masraf sayfası ekranın tamamını kaplayacak şekilde sağa ve sola genişletildi.Avans ekranı sola sıfıra sıfırdı, sağa kaydırıldı.

--- a/HR_Project/HR_Project.Presentation/Views/Advance/Update.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Advance/Update.cshtml
@@ -7,10 +7,10 @@
 	Layout = "~/Views/Shared/_GeneralLayout.cshtml";
 }
 
-<h1>Avansı Güncelle</h1>
+<h1 class="p-4">Avansı Güncelle</h1>
 
 <hr />
-<div class="row">
+<div class="row p-4">
 	<div class="col-md-4">
 		<form asp-action="Update">
 			<input type="hidden" asp-for="Id" />
@@ -48,6 +48,6 @@
 </div>
 
 <div>
-	<a class="h5" asp-action="Index">Listeye Geri Dön</a>
+	<a class="h5 p-4" asp-action="Index">Listeye Geri Dön</a>
 </div>
 
