Personel ve şirket bilgileri sayfasına giriş hatası düzeltildi.

--- a/HR_Project/HR_Project.Presentation/Views/Personnel/Create.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Personnel/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@using HR_Project.Common.Extensions;
 @using HR_Project.Domain.Enum;
-@model HR_Project.Common.Models.DTOs.UpdateProfileDTO
+@model HR_Project.Common.Models.DTOs.CreateProfileDTO
 
 @{
     ViewData["Title"] = "Create";
